# ygo

./: .gitattributes  .gitignore  Cargo.toml  README.md  dprint.json  miho.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: card.rs  error.rs  http.rs  lib.rs  query.rs
crates/core/src/card/: attribute.rs  banlist.rs  format.rs  frame_type.rs  mod.rs  race.rs  type.rs
scripts/: collect-variants.mjs  collect.mjs
