[workspace]
resolver = "3"
members = ["crates/cli", "crates/core"]

[workspace.package]
version = "0.1.2"
description = "Yu-Gi-Oh! API"
homepage = "https://github.com/ferreira-tb/ygo"
repository = "https://github.com/ferreira-tb/ygo"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.95"
readme = "./README.md"
keywords = ["api", "yugioh"]

[workspace.dependencies]
anyhow = "1.0"
http = "1.4"
remain = "0.2"
serde_json = "1.0"
thiserror = "2.0"

[workspace.dependencies.clap]
version = "4.6"
features = ["derive"]

[workspace.dependencies.derive_more]
version = "2.1"
features = ["display", "from", "into"]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[workspace.dependencies.specta]
version = "=2.0.0-rc.22"
features = ["derive", "serde", "serde_json", "url"]

[workspace.dependencies.strum]
version = "0.28"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.52"
default-features = false

[workspace.dependencies.url]
version = "2.5"
features = ["serde"]

[workspace.dependencies.ygo-core]
version = "0.1"
path = "./crates/core"

[workspace.lints.rust]
async_fn_in_trait = "allow"
dangling_pointers_from_temporaries = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
variant_size_differences = "warn"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
collapsible_if = "allow"
dbg_macro = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
large_enum_variant = "deny"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
