[package]
name = "ygo"
publish = true
readme = "../../README.md"

version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
no-default-features = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ygo-core.workspace = true

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[features]
default = []
specta = ["ygo-core/specta"]
