[package]
name = "ygo-core"
publish = true
readme = "../../README.md"

version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
no-default-features = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
derive_more.workspace = true
futures.workspace = true
http.workspace = true
itertools.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dependencies.specta]
workspace = true
optional = true

[features]
default = []
specta = ["dep:specta"]
